adding new images

--- a/src/markdown/blog-introduction.mdx
+++ b/src/markdown/blog-introduction.mdx
@@ -2,7 +2,7 @@
 title: blog-introduction
 ---
 
-## [Technology blog.](https://github.com/gfouz)
+## Technology blog.
 
 This blog is about latest web innovations. And this blog
 itself is built with Next.Js using the app directory
